...
              height: 160,
              padding: const EdgeInsets.all(16.0),
              child: Column(
                mainAxisSize: MainAxisSize.min,
                children: [
                  TextField(
                    key: const Key("groupCodeTextField"),
                    decoration:
                        const InputDecoration(hintText: "Group Code", border: OutlineInputBorder()),
                    controller: enteredGroupCodeController,
                  ),
                  const SizedBox(height: 15),
                  ElevatedButton(
                      key: const Key("submitGroupCodeButton"),
                      style: ElevatedButton.styleFrom(
                          foregroundColor: Colors.grey.shade50,
                          backgroundColor: Colors.grey.shade800,
                          fixedSize: const Size(100, 50)),
                      onPressed: () async {
                        if (enteredGroupCodeController.text.isNotEmpty) {
...
